# Folio

./: .gitignore  RELEASING.md
.github/workflows/: release.yml
Backend/: Cargo.toml  tauri.conf.json
Backend/icons/: icon.icns
Backend/src/: academia.rs  academia_export.rs  auth.rs  commands.rs  db.rs  documents.rs  governance.rs  lib.rs  main.rs  praxis.rs  strategie.rs
Database/migrations/: 0001_initial.sql  0002_praxis_extensions.sql  0003_document_date.sql  0004_academia_writing.sql  0005_academia_boards.sql  0006_source_details.sql  0007_governance.sql
Frontend/: README.md  package-lock.json  package.json
Frontend/project/: .thumbnail  Folio Brand.html  Login.html  Obsidian Research Hub.html  Research Hub.html  app.jsx  brand.css  brand.js  carousel.jsx  data.jsx  detail-01.jsx  detail-02.jsx  detail-03.jsx  detail-04.jsx  detail-05.jsx  detail-shared.jsx  home.jsx  icons.jsx  landing.jsx  login.css  login.jsx  praxis-data.jsx  praxis-fall.jsx  praxis-home.jsx  praxis-workbench.jsx  praxis.css  shell.jsx  strategie-analyse.jsx  strategie-data.jsx  strategie-execution.jsx  strategie-foresight.jsx  strategie-home.jsx  strategie-journal.jsx  strategie-optionen.jsx  strategie-timeline.jsx  strategie-wargame.jsx  styles.css
Frontend/project/ob/: ob-app.jsx  ob-data.jsx  ob-notes.jsx  ob-styles.css
Frontend/src/: App.tsx  index.css
Frontend/src/components/: Icon.tsx  PdfViewer.tsx  UpdateBanner.tsx
Frontend/src/lib/: download.ts  tauri.ts  updater.ts
Frontend/src/modules/: AcademiaHome.tsx
Frontend/src/screens/: Login.tsx
(+60 files in other folders)
